# swagger.yaml
@@ -134,6 +134,10 @@ components:
         security:
           type: string
           description: the client-defined security level to apply
+        messageTTL:
+          type: integer
+          format: int64
+          description: the optional setting for message TTL
       required:
         - clientId
         - requestId
